(fix): Prevent video autoplay to make channel feeds jump

--- a/src/app/modules/channels/v2/feed/feed.component.scss
+++ b/src/app/modules/channels/v2/feed/feed.component.scss
@@ -1,4 +1,6 @@
 .m-theme__2020 .m-channel__feed {
+  min-height: 100vh;
+
   [class*='m-pageLayout__pane'] {
     padding: 20px 40px;
 
